<resources>
    <string name="app_name">PCI</string>
    <string name="vem_pci">Virtual Exchange Machine</string>
    <string name="virtual_exc">Virtual Exchange Machine </string>
    <string name="password_forgot">Esqueceu a senha?</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up_id">Não tem uma conta?</string>
    <string name="policy_privacy">Política de privacidade</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="complete_name">Nome completo</string>
    <string name="sign_up_button">Registrar</string>
    <string name="sign_in_text">Já possui uma conta? Entre</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="no_account">Não tem uma conta? Cadastre-se!</string>
    <string name="error_email_empty">Email é obrigatório</string>
    <string name="error_email_invalid">Entre com um email válido</string>
    <string name="error_password_invalid">A senha deve conter pelo menos 6 caracteres</string>
    <string name="error_password_empty">Senha obrigatória</string>
    <string name="loading">Carregando dados…</string>
    <string name="wait">Aguarde</string>
    <string name="auth_failed">Autenticação inválida</string>
    <string name="error_password_different"> Senha diferente</string>
    <string name="error_name_empty"> Nome obrigatório</string>
    <string name="logout"> Sair</string>
    <string name="privacy_policy">Políticas de privacidade</string>
    <string name="reset_password_tv">Para a recuperação de sua senha, favor preencher o campo com o E-mail. Enviaremos sua senha através deste.</string>
    <string name="reset_password_send">Enviar</string>
    <string name="choose_type">Eu sou</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="birthDate">Data de Nascimento</string>
    <string name="edit">Editar</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="facebook">Facebook</string>
    <string name="skype">Skype</string>
    <string name="student">Estudante</string>
    <string name="students">Estudantes</string>
    <string name="professor">Professor</string>
    <string name="gender">Gênero</string>
    <string name="null_info">Não informado</string>
    <string name="degree">Degree</string>
    <string name="view">Visualizar</string>
    <string name="save">Salvar</string>
    <string-array name="array_spinner">
        <item>Estudante</item>
        <item>Professor</item>
    </string-array>
    <string-array name="array_gender">
        <item> Masculino</item>
        <item> Feminino</item>
        <item> Outro</item>
    </string-array>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="other">Outro</string>
    <string name="poject">Projetos</string>
    <string name="student_menu">Alunos</string>
    <string name="profile_title">Perfil</string>
    <string name="acc_success">Conta criada com sucesso!</string>
    <string name="reset_passwd">Reset Password</string>
    <string name="home">Principal</string>
    <string name="date_formatter">dd/MM/yyyy</string>
    <string name="null_user">Usuário Nulo</string>
    <string name="profile">Perfil</string>
    <string name="my_projects">Meus Projetos</string>
    <string name="professors">Professores</string>
    <string name="universities">Universidades</string>
    <string name="in_progress">Em andamento</string>
    <string name="reset_email_error">Favor inserir E-mail</string>
    <string name="email_sent">Email enviado!</string>
    <string name="projects_in_progress">Projetos em andamento</string>
    <string name="finished_projects">Projetos finalizados</string>
    <string name="description">Descrição</string>
    <string name="phase_progress">Progresso das Fases</string>
    <string name="status">Status</string>
    <string name="finished">Finalizado</string>
    <string name="student_info">STUDENT_INFO</string>
    <string name="start_time">Início</string>
    <string name="end_time">Fim</string>
    <string name="project">Projeto</string>
    <string name="bio">Biografia</string>
    <string name="professor_info">PROFESSOR_INFO</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit velit, rutrum blandit varius sed, elementum at diam. Etiam quis dignissim felis, in ornare risus. Nunc ut tincidunt neque. Quisque eget ligula massa. Curabitur efficitur vulputate nulla, nec dictum turpis malesuada facilisis. Morbi in ullamcorper libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean dignissim tincidunt auctor. In porta justo ut tincidunt sodales. Vestibulum hendrerit, elit eget rutrum pulvinar, augue sem consectetur ligula, in posuere augue nunc a sapien. Vestibulum nec libero volutpat, feugiat quam at, egestas orci. Ut id orci vulputate, vulputate arcu mattis, vestibulum justo. Vivamus molestie, enim vel scelerisque mattis, risus massa tincidunt orci, at pharetra mi nunc non felis. Etiam vulputate est lectus, in efficitur leo efficitur sit amet. Phasellus eget eros sit amet dui iaculis laoreet. Duis faucibus, felis vel placerat tempor, est eros ultrices purus, sit amet euismod enim tellus sed enim. Integer condimentum augue eros, vel iaculis est pulvinar quis. Suspendisse luctus augue eu imperdiet auctor. Aliquam a maximus lorem, ac molestie quam. Quisque blandit quis dolor et egestas. Quisque quis suscipit ex, quis mattis sapien. Cras eget ipsum vel magna congue gravida. Mauris id suscipit elit, vitae rutrum nibh. Mauris sit amet iaculis neque. Phasellus vel nisi eget dolor varius vulputate. Duis ullamcorper metus diam. Donec eget semper justo. Vivamus a pulvinar eros. Mauris imperdiet justo at urna volutpat, id lacinia sem porttitor. Nullam non augue ac orci dapibus pellentesque. Cras convallis orci ac nulla dignissim, a sagittis neque rhoncus. Sed a nibh id massa porttitor varius congue quis urna. Nulla imperdiet feugiat justo, vitae aliquet ex convallis id. Aenean eu ex vitae felis ornare tincidunt. Vivamus consectetur at nunc non sodales. Vivamus non nulla vitae dolor facilisis rutrum. Phasellus vulputate mattis felis. Pellentesque ut tincidunt mi. Quisque vel quam semper, efficitur ex at, ullamcorper leo. Nullam sagittis vehicula imperdiet. Cras dignissim, quam in congue dapibus, est est porttitor tortor, id sodales purus lacus et libero. Nunc nisl magna, ullamcorper consequat pellentesque ac, luctus eget nulla. Suspendisse potenti. Nunc quis tempus purus. Morbi mattis, est non interdum tincidunt, augue nulla euismod nibh, nec porttitor velit eros non metus. Vestibulum diam erat, faucibus ut risus vel, ullamcorper tempus justo. Vestibulum ac mi laoreet sapien efficitur pretium nec et dui. Donec sit amet massa sed magna bibendum elementum. Duis imperdiet viverra sodales. Donec aliquet bibendum est eu egestas. Morbi tristique risus eu pretium ultrices. Donec ullamcorper bibendum risus, quis laoreet lorem. Integer non nisi quis nibh convallis rhoncus. Morbi id odio condimentum, finibus diam ac, sodales dui. Mauris lacinia libero et eros viverra porttitor. Ut ac maximus dui, vel cursus velit. Sed dignissim fringilla viverra. Vivamus malesuada aliquet mauris, at pretium ipsum. Sed sodales diam ligula, vel hendrerit neque convallis eget.</string>
    <string name="upload_photo_fail">Falha ao dar upload em foto</string>
    <string name="phases">Fases</string>
    <string name="projects">Projetos</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="feed">Feed</string>
    <string name="developers">Desenvolvedores</string>
    <string name="plataform_in_progress">Plataforma em Desenvolvimento!</string>
    <string name="project_management">Project Management is Life!</string>
    <string name="members">Membros</string>
    <string name="project_title">Título do Projeto</string>
    <string name="create_project">Criar Projeto</string>
    <string name="university">Universidade</string>
</resources>
