<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/grp1">
        <item
            android:id="@+id/menu_feed"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/feed" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/menu_project"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/projects" />

    </group>

    <group android:id="@+id/grp2">

        <item
            android:id="@+id/menu_privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_receipt_black_24dp">

        </item>

        <item
            android:id="@+id/menu_creators"
            android:title="@string/developers"
            android:icon="@drawable/ic_developer_mode_black_24dp">

        </item>

        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>


    </group>


</menu>