<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/project_students"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/students"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/project_professors"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/professors"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/project_edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/edit"
            app:showAsAction="ifRoom"
            android:visible="false"/>

</menu>