<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/professor_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/ic_launcher_round"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/professor_photo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <TextView
                style="@style/textContentBlackBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete_name" />

            <TextView
                android:id="@+id/professor_name"
                style="@style/textContentBlackSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp" />

            <TextView
                style="@style/textContentBlackBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degree" />

            <TextView
                android:id="@+id/professor_degree"
                style="@style/textContentBlackSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp" />

            <TextView
                style="@style/textContentBlackBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/professor_gender"
                style="@style/textContentBlackSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp" />

            <TextView
                style="@style/textContentBlackBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthDate" />

            <TextView
                android:id="@+id/professor_birthDate"
                style="@style/textContentBlackSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp" />

            <TextView
                style="@style/textContentBlackBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                android:id="@+id/professor_email"
                style="@style/textContentBlackSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp" />

            <TextView
                style="@style/textContentBlackBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio" />

            <TextView
                android:id="@+id/professor_bio"
                style="@style/textContentBlackSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:lines="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/professor_face"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/facebook"
                    android:src="@drawable/facebook_32" />

                <ImageButton
                    android:id="@+id/professor_skype"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/skype"
                    android:src="@drawable/skype_32" />

            </LinearLayout>

            <Button
                android:id="@+id/professor_edit_button"
                style="@style/buttonTextAndBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:text="@string/edit" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>