<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context=".activities.ResetPasswordActivity">


    <TextView
        android:id="@+id/textView2"
        style="@style/textContentBlackBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/reset_password_tv" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/resetInputLayout"
        style="@style/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/reset_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_reset_email"
        style="@style/buttonTextAndBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/reset_password_send"
      />

</LinearLayout>