<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:id="@+id/student_photo"
            android:src="@mipmap/ic_launcher_round"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_name"
            android:layout_marginBottom="25sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_gender"
            android:layout_marginBottom="25sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthDate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_birthDate"
            android:layout_marginBottom="25sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_email"
            android:layout_marginBottom="25sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/facebook_64"
                android:layout_marginEnd="20sp"
                android:id="@+id/student_face"
                android:background="@color/colorWhite"
                android:contentDescription="@string/facebook"/>

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/skype_64"
                android:layout_marginStart="20sp"
                android:id="@+id/student_skype"
                android:background="@color/colorWhite"
                android:contentDescription="@string/skype"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:orientation="vertical"
            android:id="@+id/student_layout_button"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>